--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -6,7 +6,32 @@ body{
     flex-direction: column;
     min-height: 100vh;
 }
+    .inicio{
+        position: absolute;
+        background-color: white;
+        padding: 5px;
+        font-family: 'Roboto', sans-serif;
+        text-align: center;
+        border-radius: 20px;
+        width: 45%;
+        height: 35%;
+        right: 27%;
+        top: 25%;
+    }
+       .inicio input{
+           margin: 13px;
+           margin-bottom: 20px;
+           width: 40%;
+       }
+       .inicio button{
+        background-color: rgb(24, 192, 52);
+           color: #fff;
+           width: 20%;
+           height: auto;
+           font-size: 18px;
+           border-radius: 10%;
 
+       }
     .jugador button{
         width: 230px;
         height: 170px;
